Fix overlap issue for footer, delete 2 lines commented out in user.scss

--- a/resources/assets/user/sass/layout/_footer.scss
+++ b/resources/assets/user/sass/layout/_footer.scss
@@ -3,7 +3,7 @@
     position: fixed;
     width: 100%;
     bottom: 0px;
-    z-index: 15;
+    z-index: 99;
     background: $darkBlue;
     color: #fff;
     padding-top: 10px;
